remove bootstrap files